src/main/java/com/revolvingmadness/testing/language/interpreter/errors/Continue.java
package com.revolvingmadness.testing.language.interpreter.errors;

public class Continue extends RuntimeException {
    public Continue() {
        super("Unexpected 'continue' statement");
    }
}
